--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.cloudbees</groupId>
-        <artifactId>cloudbees-oss-parent</artifactId>
-        <version>9</version>
+        <groupId>org.jenkins-ci</groupId>
+        <artifactId>jenkins</artifactId>
+        <version>1.90</version>
         <relativePath />
     </parent>
 
+    <groupId>com.cloudbees</groupId>
     <artifactId>groovy-cps-parent</artifactId>
     <version>${revision}${changelist}</version>
     <packaging>pom</packaging>
 
     <name>Groovy CPS Execution Parent</name>
+    <description>Groovy interpreter that runs Groovy code in the continuation passing style</description>
+    <url>https://github.com/cloudbees/${project.artifactId}</url>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <groovy.version>2.4.21</groovy.version>
         <revision>1.35</revision>
         <changelist>-SNAPSHOT</changelist>
-        <!-- TODO: Move these three properties to the parent POM or use org.jenkins-ci:jenkins as the parent POM here -->
-        <incrementals-enforce-minimum.version>1.1</incrementals-enforce-minimum.version>
-        <incrementals-plugin.version>1.1</incrementals-plugin.version>
-        <incrementals.url>https://repo.jenkins-ci.org/incrementals/</incrementals.url>
-        <scmTag>HEAD</scmTag>
+        <gitHubRepo>cloudbees/${project.artifactId}</gitHubRepo>
     </properties>
 
-    <scm>
-        <connection>scm:git:git@github.com/cloudbees/groovy-cps.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/cloudbees/groovy-cps.git</developerConnection>
+    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
+        <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+        <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <tag>${scmTag}</tag>
+        <url>https://github.com/${gitHubRepo}</url>
     </scm>
 
     <licenses>
@@ -45,153 +45,17 @@
         <module>lib</module>
     </modules>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>io.jenkins.tools.incrementals</groupId>
-                    <artifactId>incrementals-maven-plugin</artifactId>
-                    <version>${incrementals-plugin.version}</version>
-                    <configuration>
-                        <includes>
-                            <include>org.jenkins-ci.*</include>
-                            <include>io.jenkins.*</include>
-                        </includes>
-                        <generateBackupPoms>false</generateBackupPoms>
-                        <updateNonincremental>false</updateNonincremental>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
 
-    <!-- TODO: Move these profiles to the parent POM or use org.jenkins-ci:jenkins as the parent POM here -->
-    <profiles>
-        <profile> <!-- see JEP-305 -->
-            <id>consume-incrementals</id>
-            <repositories>
-                <repository>
-                    <id>incrementals</id>
-                    <url>${incrementals.url}</url>
-                    <snapshots>
-                        <enabled>false</enabled>
-                    </snapshots>
-                </repository>
-            </repositories>
-            <pluginRepositories>
-                <pluginRepository>
-                    <id>incrementals</id>
-                    <url>${incrementals.url}</url>
-                    <snapshots>
-                        <enabled>false</enabled>
-                    </snapshots>
-                </pluginRepository>
-            </pluginRepositories>
-        </profile>
-        <profile>
-            <id>might-produce-incrementals</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>flatten-maven-plugin</artifactId>
-                        <version>1.0.1</version>
-                        <configuration>
-                            <updatePomFile>true</updatePomFile>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <flattenedPomFilename>${project.artifactId}-${project.version}.pom</flattenedPomFilename>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>flatten</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>flatten</goal>
-                                </goals>
-                                <configuration>
-                                    <flattenMode>oss</flattenMode>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <version>3.0.0-M2</version>
-                        <executions>
-                            <execution>
-                                <id>display-info</id>
-                                <configuration>
-                                    <rules>
-                                        <requireMavenVersion>
-                                            <version>[3.5.4,)</version>
-                                            <message>3.5.4+ required to use Incrementals.</message>
-                                        </requireMavenVersion>
-                                        <rule implementation="io.jenkins.tools.incrementals.enforcer.RequireExtensionVersion">
-                                            <version>[${incrementals-enforce-minimum.version},)</version>
-                                        </rule>
-                                    </rules>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>io.jenkins.tools.incrementals</groupId>
-                                <artifactId>incrementals-enforcer-rules</artifactId>
-                                <version>${incrementals-plugin.version}</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-release-plugin</artifactId>
-                        <configuration>
-                            <completionGoals>incrementals:reincrementalify</completionGoals>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>produce-incrementals</id>
-            <activation>
-                <property>
-                    <name>set.changelist</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <distributionManagement>
-                <repository>
-                    <id>incrementals</id>
-                    <url>${incrementals.url}</url>
-                </repository>
-            </distributionManagement>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>3.0.1</version>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>attach-javadocs</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
