Restore test JAR

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -172,4 +172,24 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>jenkins-release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-source-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-test-sources</id>
+                <goals>
+                  <goal>test-jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
